--- a/frontend/index.html
+++ b/frontend/index.html
@@ -50,7 +50,7 @@
             </div>
             <div class="stat-card">
                 <div class="stat-label">Last Update</div>
-                <div class="stat-value" id="last-update" style="font-size: 18px;">--</div>
+                <div class="stat-value" id="last-update">--</div>
             </div>
         </div>
 
