Add an example SignalR connection

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,7 @@
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/8.0.0/signalr.min.js"></script>
 </head>
 
 <body>
